--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         </header>
 
         <section>
-            <span>
+
+            <span>This will be where I keep track of all our notes</span>
+
+            <div>
                 <h1>Brain Storming</h1>
-                <p>We will have to talk about possible projects to come up</p>
-            </span>
+                <p>We will <span>have to talk</span> about possible projects to come up</p>
+            </div>
         
             <hr>
 
@@ -49,19 +52,19 @@
             <div>
                 <h1>Images, Audio, and Video of Meeting</h1>
                 <h2>Image</h2>
-                <img src="sample code.jpg" alt="sample code of java">
+                <img src="samplecode.jpg" alt="sample code of java">
 
                 <br>
-                
+
                 <audio controls>
-                    <source src="CSE 110.mp3" type="audio/mpeg">
+                    <source src="CSE110.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <br>
 
                 <video controls width="300">
-                    <source src="CSE 110.mp4" type="video/mp4">
+                    <source src="CSE110.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -88,7 +91,7 @@
 
                     <br>
 
-                    <textarea rows="2" col="10" placeholder="write more notes here"></textarea>
+                    <textarea rows="2" cols="10" placeholder="write more notes here"></textarea>
 
                     <br>
 
