--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="assets/icon.png">
     <title>Jeff Team Meeting 1</title>
   </head>
   <body>
@@ -52,19 +52,19 @@
             <div>
                 <h1>Images, Audio, and Video of Meeting</h1>
                 <h2>Image</h2>
-                <img src="samplecode.jpg" alt="sample code of java">
+                <img src="assets/samplecode.jpg" alt="sample code of java">
 
                 <br>
 
                 <audio controls>
-                    <source src="CSE110.mp3" type="audio/mpeg">
+                    <source src="assets/CSE110.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <br>
 
                 <video controls width="300">
-                    <source src="CSE110.mp4" type="video/mp4">
+                    <source src="assets/CSE110.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
