--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
 
         <footer>
-
+            <h1>Thank you For reading my notes!</h1>
 
         </footer>
     </main>
