--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
 
             <div>
                 <h1>Images, Audio, and Video of Meeting</h1>
-                <h2>Image</h2>
+                <h2>Imags</h2>
+                <h3>Random Code I found online</h3>
                 <img src="assets/samplecode.jpg" alt="sample code of java">
 
+                <h3>W3 Validation</h3>
+                <img src="screenshots/valid.png" alt="my valid W3, TRUST">
                 <br>
 
                 <audio controls>
@@ -84,6 +87,7 @@
             <div>
                 <h1>Forms</h1>
                 <form>
+                    <h2>fieldset</h2>
                     <fieldset>
                         <legend>More Questions</legend>
                         <label>Name: <input type="text"></label>
@@ -91,10 +95,12 @@
 
                     <br>
 
+                    <h2>textarea</h2>
                     <textarea rows="2" cols="10" placeholder="write more notes here"></textarea>
 
                     <br>
 
+                    <h2>list of favorite classes</h2>
                     <input list="favorite-classes">
                     <datalist id="favorite-classes">
                         <option value="CSE 11">
@@ -104,11 +110,41 @@
 
                     <br>
 
+                    <h2>favorite computing</h2>
                     <select>
                         <option value="web dev">Web Dev</option>
                         <option value="ai">AI</option>
                         <option value="cyber security">Cyber Security</option>
                     </select>
+
+                    <br>
+
+                    <h2>Inputs!</h2>
+                    <h3>Checkbox</h3>
+                    <label>
+                        <input type="checkbox" name="check in with TA" value="todo"> Schedule Time with TA
+                    </label>
+
+                    <br>
+
+                    <h3>Radio</h3>
+                    <label>
+                        <input type="radio" name="favorite food" value="banana"> banana
+                    </label>
+
+                    <br>
+
+                    <h3>Date</h3>
+                    <label>
+                        Date of Birth: <input type="date" name="birthday">
+                    </label>
+
+                    <br>
+
+                    <h3>Test</h3>
+                    <label>
+                        Favorite Sport<input type="text">
+                    </label>
 
                     <br>
 
