--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="assets/icon.png">
     <title>Jeff Team Meeting 1</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <main>
@@ -18,10 +19,10 @@
 
         <section>
 
-            <span>This will be where I keep track of all our notes</span>
+            <span class="first">This will be where I keep track of all our notes</span>
 
             <div>
-                <h2>Brain Storming</h2>
+                <h2 id="brain">Brain Storming</h2>
                 <p>We will <span>have to talk</span> about possible projects to come up</p>
             </div>
         
