--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="icon.png">
     <title>Jeff Team Meeting 1</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
