I fixed some stuff

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <br>
 
             <div>
-                <h2>Forms</h2>
+                <h2 style="color:blue; font-size:60px">Forms</h2>
                 <form>
                     <h2>fieldset</h2>
                     <fieldset>
@@ -164,3 +164,10 @@
     </main>
   </body>
 </html>
+
+<style>
+    footer{
+        font-weight: bold;
+        font-size: 60px;
+    }
+</style>
